--- a/app/views/detalhes_equipamentos/index.html.erb
+++ b/app/views/detalhes_equipamentos/index.html.erb
@@ -1,10 +1,10 @@
 <% content_for :titulo do %>
-  Detalhes dos Equipamentos
+  Modelos de Equipamentos
 <% end %>
 
 <% content_for :sub_titulo do %>
   
-  Lista de Detalhes de Equipamentos
+  Lista de Modelos de Equipamentos
   <%= link_to link_icone('novo'), new_detalhes_equipamento_path, :class=> 'btn btn-success', :title=>"Novo Detalhe de Equipamento" %>
   
 <% end %>
