--- a/app/views/detalhes_equipamentos/new.html.erb
+++ b/app/views/detalhes_equipamentos/new.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Detalhes de Equipamentos
+  Modelos de Equipamentos
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Novo Detalhe de Equipamento
+  Novo Modelo de Equipamento
 <% end %>
 
 <%= render 'form' %>
