--- a/app/views/detalhes_equipamentos/show.html.erb
+++ b/app/views/detalhes_equipamentos/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Detalhes de Equipamentos
+  Modelos de Equipamentos
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Detalhes do Equipamento
+  Modelo do Equipamento
 <% end %>
 
 <p>
