--- a/app/views/status_equipamentos/edit.html.erb
+++ b/app/views/status_equipamentos/edit.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Status Equipamento
+  Estado Equipamento
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Editar Status de Equipamento
+  Editar Estado de Equipamento
 <% end %>
 
 <%= render 'form' %>
