--- a/app/views/status_equipamentos/index.html.erb
+++ b/app/views/status_equipamentos/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Status Equipamentos
+  Estado Equipamentos
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Lista de Status dos Equipamentos
+  Lista de Estado dos Equipamentos
   <%= link_to link_icone('novo'), new_status_equipamento_path, :class=> 'btn btn-success', :title=>"Novo Status Equipamento" %>
 
 <% end %>
