--- a/app/views/status_equipamentos/show.html.erb
+++ b/app/views/status_equipamentos/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Status Equipamento
+  Estado Equipamento
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Detalhes do Status do Equipamento
+  Detalhes do Estado do Equipamento
 <% end %>
 
 <p>
