--- a/app/views/detalhes_equipamentos/edit.html.erb
+++ b/app/views/detalhes_equipamentos/edit.html.erb
@@ -1,9 +1,9 @@
 <% content_for :titulo do %>
-  Detalhes de Equipamentos
+  Modelos de Equipamentos
 <% end %>
 
 <% content_for :sub_titulo do %>
-  Editar Detalhe de Equipamento
+  Editar Modelo de Equipamento
 <% end %>
 
 <%= render 'form' %>
