--- a/app/views/estatisticas/index.html.erb
+++ b/app/views/estatisticas/index.html.erb
@@ -330,7 +330,7 @@ $("#exportButton").click(function(){
 	</script>
 
 
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<div id="chartContainer" style="height: 400px; width: 400px;"></div>
 <!--<button id="exportButton" type="button">Exportar para PDF</button>-->
 
 
