--- a/app/views/estatisticas/index.html.erb
+++ b/app/views/estatisticas/index.html.erb
@@ -277,7 +277,7 @@ window.onload = function () {
 		exportEnabled: true,
 		showInLegend: true,
     legend: {
-      horizontalAlign: "right",
+      horizontalAlign: "left",
       verticalAlign: "center"
     },
     data: [
@@ -330,7 +330,7 @@ $("#exportButton").click(function(){
 	</script>
 
 
-<div id="chartContainer" style="height: 400px; width: 1000px;"></div>
+<div id="chartContainer" style="height: 400px; width: 100%;"></div>
 <!--<button id="exportButton" type="button">Exportar para PDF</button>-->
 
 
