--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -74,17 +74,39 @@
   <br/><strong>Em: </strong><%= @request.created_at.strftime("%d/%m/%Y %H:%M") %>
   <br/><strong>Última modificação: </strong><%= @request.updated_at.strftime("%d/%m/%Y %H:%M") %>
 </p>
-  
+
 <%= link_to link_icone('voltar'), requests_path, :class=>'btn btn-default', :title=>"Voltar" %> 
-<%= link_to link_icone('editar'), edit_request_path(@request), :class=>"btn btn-primary", :title=>"Editar" %> 
-<%= link_to link_icone('nova'), new_request_path, :class=> 'btn btn-success', :title=>"Nova Requisição" %>
 
-<%= link_to link_icone2('passageiros'," Passageiro(#{@request.request_passengers.count})"), request_request_passengers_path(@request), :class=> 'btn btn-small btn-success', :title=>"Passageiros" %>
-<%= link_to link_icone2('destinos'," Destino(#{@request.request_destinies.count})"), request_request_passengers_path(@request), :class=> 'btn btn-small btn-success', :title=>"Destinos" %>
-
+<% if can? :update, request %>    
+  <%= link_to link_icone('editar'), edit_request_path(@request), :class=>"btn btn-primary", :title=>"Editar" %> 
+<% end %>
 <% if can? :delete, request %>
   <%= link_to link_icone('apagar'), request_path(@request), :class=>"btn btn-small btn-danger", method: :delete, data: { confirm: 'Apagar a requisição?' }, :title=>"Apagar" %> 
 <% end %>
+<% if can? :cancelar, @request %>
+  <%= link_to 'Cancelar', request_cancelar_path(@request), :class=>"btn btn-small btn-danger", :title=>"Cancelar" %> 
+<% end %>
+<% if can? :requisitar, @request %>    
+  <%= link_to link_icone2('requisitar','Requisitar'),
+                  request_requisitar_url(@request), :class => 'btn btn-small btn-default', :title=>" Finalizar" %>
+<% end %>
 
-<%= link_to link_icone2('requisitar','Requisitar'),
-                    request_requisitar_url(@request), :class => 'btn btn-small btn-default', :title=>" Finalizar" %>
+<% if current_user.cad_transporte? %>
+
+<% end %>
+
+<% if current_user.useget_transporte? %>
+
+<% end %>
+
+<% if current_user.requisitante_transporte? %>
+  
+  <% if @request.status == "EM ABERTO" %>
+    
+    <%= link_to link_icone2('passageiros'," Passageiro(#{@request.request_passengers.count})"), request_request_passengers_path(@request), :class=> 'btn btn-small btn-success', :title=>"Passageiros" %>
+    <%= link_to link_icone2('destinos'," Destino(#{@request.request_destinies.count})"), request_request_passengers_path(@request), :class=> 'btn btn-small btn-success', :title=>"Destinos" %>
+  <% end %>
+
+<% end %>
+
+<%= link_to link_icone('nova'), new_request_path, :class=> 'btn btn-success', :title=>"Nova Requisição" %>
