--- a/app/views/destinies/index.html.erb
+++ b/app/views/destinies/index.html.erb
@@ -1,13 +1,20 @@
-<p id="notice"><%= notice %></p>
+<% content_for :titulo do %>
+  Destinos
+<% end %>
 
-<h1>Listing Destinies</h1>
+<% content_for :sub_titulo do %>
+  
+  Lista de Destinos 
+  <%= link_to link_icone('novo'), new_destiny_path, :class=> 'btn btn-success', :title=>"Novo Destino" %>
+ 
+<% end %>
 
-<table>
+<table id="tabela" class="display" cellspacing="0" width="100%">
   <thead>
     <tr>
       <th>Nome</th>
       <th>Municipio</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -16,14 +23,16 @@
       <tr>
         <td><%= destiny.nome %></td>
         <td><%= destiny.municipio %></td>
-        <td><%= link_to 'Show', destiny %></td>
-        <td><%= link_to 'Edit', edit_destiny_path(destiny) %></td>
-        <td><%= link_to 'Destroy', destiny, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to link_icone('detalhes'), destiny_path(destiny), :class => 'btn btn-default', :title=>"Detalhes" %>
+          <% if can? :update, destiny %>
+            <%= link_to link_icone('editar'), edit_destiny_path(destiny), :class => 'btn btn-primary', :title=>"Editar" %>
+          <% end %>          
+          <% if can? :delete, destiny %>
+            <%= link_to link_icone('apagar'), destiny_path(destiny), :class=>"btn btn-danger", method: :delete, data: { confirm: 'Você está certo disso?' }, :title=>"Apagar" %> 
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Destiny', new_destiny_path %>
