--- a/app/views/passengers/_form.html.erb
+++ b/app/views/passengers/_form.html.erb
@@ -1,15 +1,36 @@
 <%= simple_form_for(@passenger) do |f| %>
   
-
   <div class="form-inputs">
-    <%= f.input :nome %>
-    <%= f.input :tipo, collection: @lista_tipo_passageiros, as: :select, :include_blank => true %>
-    <%= f.input :matricula %>
-    <%= f.input :cpf, :label=>"CPF", :input_html=>{:class=>'cpf'} %>
-    <%= f.input :respaldo %>
+
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.input :nome, :label=>"Nome Completo" %>
+      </div>
+      
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <%= f.input :tipo, collection: @lista_tipo_passageiros, as: :select, :include_blank => true %>
+      </div>
+      <div class="col-md-2">
+        <%= f.input :cpf, :label=>"CPF", :input_html=>{:class=>'cpf'} %>
+      </div>
+      <div class="col-md-2">
+        <%= f.input :matricula %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.input :respaldo %>
+      </div>
+    </div>
+    
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-actions" align="center">
+    <%= f.button :submit, 'Salvar', :class => 'btn btn-primary' %>
+    <%= link_to 'Voltar', passengers_path, :class=>'btn btn-default' %>
   </div>
 <% end %>
