--- a/app/views/passengers/edit.html.erb
+++ b/app/views/passengers/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Passenger</h1>
+<% content_for :titulo do %>
+  Passageiros
+<% end %>
+
+<% content_for :sub_titulo do %>
+  Editar Passageiro
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @passenger %> |
-<%= link_to 'Back', passengers_path %>
