--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -1,16 +1,22 @@
-<p id="notice"><%= notice %></p>
+<% content_for :titulo do %>
+  Passageiros
+<% end %>
 
-<h1>Listing Passengers</h1>
+<% content_for :sub_titulo do %>
+  
+  Lista de Passageiros 
+  <%= link_to link_icone('novo'), new_passenger_path, :class=> 'btn btn-success', :title=>"Novo Passageiro" %>
+ 
+<% end %>
 
-<table>
+<table id="tabela" class="display" cellspacing="0" width="100%">
   <thead>
     <tr>
       <th>Nome</th>
-      <th>Tipo</th>
+      <th>CPF</th>
       <th>Matricula</th>
-      <th>Cpf</th>
-      <th>Respaldo</th>
-      <th colspan="3"></th>
+      <th>Tipo</th>
+      <th></th>
     </tr>
   </thead>
 
@@ -18,18 +24,19 @@
     <% @passengers.each do |passenger| %>
       <tr>
         <td><%= passenger.nome %></td>
-        <td><%= passenger.tipo %></td>
-        <td><%= passenger.matricula %></td>
         <td><%= passenger.cpf %></td>
-        <td><%= passenger.respaldo %></td>
-        <td><%= link_to 'Show', passenger %></td>
-        <td><%= link_to 'Edit', edit_passenger_path(passenger) %></td>
-        <td><%= link_to 'Destroy', passenger, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= detalhes(passenger.matricula) %></td>
+        <td><%= passenger.tipo %></td>
+        <td>
+          <%= link_to link_icone('detalhes'), passenger_path(passenger), :class => 'btn btn-default', :title=>"Detalhes" %>
+          <% if can? :update, passenger %>
+            <%= link_to link_icone('editar'), edit_passenger_path(passenger), :class => 'btn btn-primary', :title=>"Editar" %>
+          <% end %>          
+          <% if can? :delete, passenger %>
+            <%= link_to link_icone('apagar'), passenger_path(passenger), :class=>"btn btn-danger", method: :delete, data: { confirm: 'Você está certo disso?' }, :title=>"Apagar" %> 
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Passenger', new_passenger_path %>
