--- a/app/views/passengers/new.html.erb
+++ b/app/views/passengers/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Passenger</h1>
+<% content_for :titulo do %>
+  Passageiros
+<% end %>
+
+<% content_for :sub_titulo do %>
+  Novo Passageiro
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', passengers_path %>
+
